15516
```scala
scala> def f { case class C(); object C }
<console>:5: error: C is already defined as (compiler-generated) case class companion object C
       def f { case class C(); object C }
                                      ^
```

`ensureCompanionObject` in the namer does not find the existing one and adds another (synthetic) one.
